package hu.simplexion.rui.kotlin.plugin.ir.air

import hu.simplexion.rui.kotlin.plugin.ir.rum.RumElement

interface AirElement {
    val rumElement: RumElement
}