package hu.simplexion.rui.kotlin.plugin.ir.air

interface AirExternalPatch : AirFunction